--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@ html {
     background-color: black;
 }
 
-#main-container {
+.main-container {
     align-items: center;
     background-color: black;
     display: flex;
